# Rust-Intermediate-Tutorial

./: .gitignore  README.md  alpine-mismatch.Dockerfile
intermediate-concepts/: Cargo.toml
intermediate-concepts/src/: closures.rs  errors.rs  generics.rs  macros1.rs  macros2.rs  os-commands.rs  traits1.rs  traits2.rs
mining-pool-api/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
mining-pool-api/migrations/2022-03-08-033828_mining_pool_api/: down.sql  up.sql
mining-pool-api/src/: config.rs  main.rs  miner.rs  miner_controller.rs  schema.rs  util.rs  wallet.rs  wallet_controller.rs
pointers/src/: main.rs
rust-and-docker/: Cargo.toml  Dockerfile  centos.Dockerfile  docker-alpine.Dockerfile  docker-debian.Dockerfile
rust-and-docker/src/: main.rs
some_bin/: Cargo.toml
some_bin/src/: main.rs
some_lib/: Cargo.toml
some_lib/src/: lib.rs  some_lib_functions.rs
traits/src/: main.rs  traits1.rs
