[package]
name = "mining-pool-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.0"
actix-web = "3.0.0-alpha.1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.7.1"
rand = "0.8.4"
serde = "1.0.106"
serde_json = "1.0.51"
uuid = { version = "0.8", features = ["serde", "v4"] }