[package]
name = "mining-pool-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.0"
actix-web = "3.0.0-alpha.1"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
env_logger = "0.7.1"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
rand = "0.8.4"
serde = "1.0.106"
serde_json = "1.0.51"
uuid = { version = "0.6", features = ["serde", "v4"] }